prevented results table from overflowing

--- a/app/assets/stylesheets/ebay_scrape.scss
+++ b/app/assets/stylesheets/ebay_scrape.scss
@@ -4,3 +4,7 @@ form {
 		margin-bottom: 15px;
 	}
 }
+
+.results-table-container {
+	overflow-x: auto;
+}
